k8s_dz_1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: otus
  name: otus-deployment
  labels:
    app: deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otus-app
  template:
    metadata:
      labels:
        app: otus-app
    spec:
      containers:
        - name: otus-app
          image: botalovegor46/otus:1.0.0
          ports:
            - name: otus-port
              containerPort: 8000
