k8s_dz_1/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: otus
  name: otus-service
spec:
  selector:
    app: otus-app
  ports:
    - port: 8000
      targetPort: otus-port
      protocol: TCP
  type: LoadBalancer
