k8s_dz_1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: otus
  name: otus-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: otus-service
                port:
                  number: 8000
            pathType: Prefix
            path: /
